feat: add translations for theme

--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
   "welcome": "Welcome!",
-  "language": "Language"
+  "language": "Language",
+  "light": "Light",
+  "dark": "Dark",
+  "system": "System"
 }
