--- a/src/common/i18n/locales/es/translation.json
+++ b/src/common/i18n/locales/es/translation.json
@@ -1,4 +1,7 @@
 {
   "welcome": "¡Bienvenido!",
-  "language": "Idioma"
+  "language": "Idioma",
+  "light": "Claro",
+  "dark": "Oscuro",
+  "system": "Sistema"
 }
