--- a/src/common/i18n/locales/pt/translation.json
+++ b/src/common/i18n/locales/pt/translation.json
@@ -1,4 +1,7 @@
 {
   "welcome": "Bem-vindo!",
-  "language": "Idioma"
+  "language": "Idioma",
+  "light": "Claro",
+  "dark": "Escuro",
+  "system": "Sistema"
 }
