feat: add more translations

--- a/src/common/i18n/locales/en/date.json
+++ b/src/common/i18n/locales/en/date.json
@@ -2,6 +2,7 @@
   "time": {
     "now": "Just now",
     "minutesAgo": "{{count}}m ago",
+    "hoursAgo": "{{count}}h ago",
     "yesterday": "Yesterday",
     "daysAgo": "{{count}} days ago"
   }
