--- a/src/common/i18n/locales/es/date.json
+++ b/src/common/i18n/locales/es/date.json
@@ -2,6 +2,7 @@
   "time": {
     "now": "Justo ahora",
     "minutesAgo": "hace {{count}}m",
+    "hoursAgo": "hace {{count}}h",
     "yesterday": "Ayer",
     "daysAgo": "hace {{count}} días"
   }
