--- a/src/common/i18n/locales/pt/date.json
+++ b/src/common/i18n/locales/pt/date.json
@@ -2,6 +2,7 @@
   "time": {
     "now": "Agora mesmo",
     "minutesAgo": "{{count}}m atrás",
+    "hoursAgo": "{{count}}h atrás",
     "yesterday": "Ontem",
     "daysAgo": "{{count}} dias atrás"
   }
