--- a/src/common/i18n/locales/pt/translation.json
+++ b/src/common/i18n/locales/pt/translation.json
@@ -198,7 +198,8 @@
     "belongsTo": "pertence ao",
     "howItWorks": "Como funciona o desafio?",
     "randomTitle": "Desafio Aleatório",
-    "randomMissionDescription": "Complete o caminho taxonômico de uma espécie escolhida aleatoriamente."
+    "randomMissionDescription": "Complete o caminho taxonômico de uma espécie escolhida aleatoriamente.",
+    "allSpeciesCompleted": "Você completou todas as espécies disponíveis!"
   },
 
   "vulnerability": {
