--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -199,7 +199,10 @@
     "howItWorks": "How does the challenge work?",
     "randomTitle": "Random Challenge",
     "randomMissionDescription": "Complete the taxonomic path of a randomly chosen species.",
-    "allSpeciesCompleted": "You've completed all available species!"
+    "allSpeciesCompleted": "You've completed all available species!",
+    "replay": "Try again",
+    "nextChallenge": "Next challenge",
+    "nextRandom": "Random Challenge"
   },
 
   "vulnerability": {
