feat: add new translate

--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -116,6 +116,7 @@
   "specieDetail": {
     "notFound": "No data found",
     "backToGallery": "Back to gallery",
+    "backToProfile": "Back to profile",
     "dataUnavailable": "Data unavailable.",
     "taxonomyTitle": "Taxonomic Classification",
     "kingdomLabel": "Kingdom",
