--- a/src/common/i18n/locales/pt/translation.json
+++ b/src/common/i18n/locales/pt/translation.json
@@ -94,7 +94,13 @@
 
   "favSpecies": {
     "title": "ESPÉCIES FAVORITAS",
-    "addFavorite": "Adicionar favorita"
+    "addFavorite": "Adicionar favorita",
+    "edit": "Editar",
+    "done": "Concluído",
+    "replace": "Substituir",
+    "pickerTitle": "Escolher espécie favorita",
+    "pickerEmpty": "Nenhuma espécie disponível",
+    "pickerEmptyHint": "Favorite espécies na galeria para adicioná-las aqui"
   },
 
   "gallery": {
