feat: add new translates

--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -123,6 +123,7 @@
     "notFound": "No data found",
     "backToGallery": "Back to gallery",
     "backToProfile": "Back to profile",
+    "backToTree": "Back to tree",
     "dataUnavailable": "Data unavailable.",
     "taxonomyTitle": "Taxonomic Classification",
     "kingdomLabel": "Kingdom",
