--- a/src/common/i18n/locales/es/translation.json
+++ b/src/common/i18n/locales/es/translation.json
@@ -123,6 +123,7 @@
     "notFound": "No se encontraron datos",
     "backToGallery": "Volver a la galería",
     "backToProfile": "Volver al perfil",
+    "backToTree": "Volver al árbol",
     "dataUnavailable": "Datos no disponibles.",
     "taxonomyTitle": "Clasificación Taxonómica",
     "kingdomLabel": "Reino",
