--- a/src/common/i18n/locales/pt/translation.json
+++ b/src/common/i18n/locales/pt/translation.json
@@ -123,6 +123,7 @@
     "notFound": "Nenhum dado foi encontrado",
     "backToGallery": "Voltar para galeria",
     "backToProfile": "Voltar para o perfil",
+    "backToTree": "Voltar para a árvore",
     "dataUnavailable": "Dados indisponíveis.",
     "taxonomyTitle": "Classificação Taxonômica",
     "kingdomLabel": "Reino",
