--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -116,7 +116,8 @@
     "noSpeciesFound": "No species found",
     "noFavorites": "You have no favorites yet",
     "adjustFilters": "Try adjusting the filters",
-    "noImage": "No image"
+    "noImage": "No image",
+    "photosFirst": "Photos first"
   },
 
   "specieDetail": {
