feat: improve challenges

--- a/src/common/i18n/locales/en/translation.json
+++ b/src/common/i18n/locales/en/translation.json
@@ -213,7 +213,7 @@
     "randomTitle": "Random Challenge",
     "randomMissionDescription": "Complete the taxonomic path of a randomly chosen species.",
     "allSpeciesCompleted": "You've completed all available species!",
-    "replay": "Try again",
+    "replay": "Play again",
     "nextChallenge": "Next challenge",
     "nextRandom": "Random Challenge",
     "pastChallenges": "Past Challenges",
