--- a/src/common/i18n/locales/es/translation.json
+++ b/src/common/i18n/locales/es/translation.json
@@ -213,7 +213,7 @@
     "randomTitle": "Desafío Aleatorio",
     "randomMissionDescription": "Completa el camino taxonómico de una especie elegida al azar.",
     "allSpeciesCompleted": "¡Has completado todas las especies disponibles!",
-    "replay": "Intentar de nuevo",
+    "replay": "Jugar de nuevo",
     "nextChallenge": "Siguiente desafío",
     "nextRandom": "Desafío Aleatorio",
     "pastChallenges": "Desafíos Anteriores",
