--- a/src/common/i18n/locales/pt/translation.json
+++ b/src/common/i18n/locales/pt/translation.json
@@ -213,7 +213,7 @@
     "randomTitle": "Desafio Aleatório",
     "randomMissionDescription": "Complete o caminho taxonômico de uma espécie escolhida aleatoriamente.",
     "allSpeciesCompleted": "Você completou todas as espécies disponíveis!",
-    "replay": "Tentar novamente",
+    "replay": "Jogar de novo",
     "nextChallenge": "Próximo desafio",
     "nextRandom": "Desafio Aleatório",
     "pastChallenges": "Desafios Anteriores",
